# oneminuta

./: .env.example  .gitignore  CONCEPTS.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  TELEGRAM_COMMANDS.md  TEST_RESULTS.md  install-hooks.sh  oneminuta  oneminuta_cli.py  pyproject.toml  request.md  requirements.txt  run_bot.py  run_tests.sh  setup.py  test_fail.py
.githooks/: pre-commit  pre-push
clauderef/: code.txt  conventions.txt  plan.txt  quest.txt
config/: roles.json  user_roles.json
docs/: CHATBOT.md  CLI_COMMANDS.md  CLI_SPEC.md  CODE_ORGANIZATION.md  GIT_HOOKS.md  PARTNER_FAQ_RESPONSES.json  PARTNER_GUIDE.md  PLANNING.md  PRODUCTION_SETUP.md  PROJECT_STRUCTURE.md  TELEGRAM_SETUP.md
docs/current/: IMPLEMENTATION_PLAN.md  ONEMINUTA_CHANNEL_SEPARATION.md  PLANNING_HISTORICAL.md
docs/dev/: CODING_COMPLIANCE.md  GIT_HOOKS.md  TESTING.md
docs/telegram/: README_BOT.md
libs/: config_loader.py  permissions.py
libs/coord-spherical/: __init__.py  debug_sphericode.py  requirements.txt  simple_test.py  spherical.py  test_spherical.py  test_sphericode.py
libs/geo-spherical/: sphericode.py
scripts/: authenticate_telegram_once.py  debug_telegram.py
scripts/analytics/: analyze_channels_only.py  generate_mock_data.py
scripts/telegram/: authenticate_telegram.py  debug_channel_messages.py  get_channel_id.py  run_telegram_bot.py  run_telegram_bot_channels.py  telegram_user_analytics.py
tests/: README.md  run_all_tests.py  setup_chatbot_testing.py  test_5day_analysis.py  test_channel_access.py  test_helpers.py  test_performance.py
(+279 files in other folders)
